Hopefully fixed extra space on left
Hopefully

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@ ul {
   width: 22%;
   border: 1px solid black;
   left: auto;
+  margin: 0;
+  padding: 0;
 }
 
 li {
